cmake_minimum_required(VERSION 3.23)
project("AdventOfCode - 2022" CXX)

set(ENV{LANG} CXX)
set(CMAKE_CXX_FLAGS "-Wall -std=c++20 -g")


# DAY 1 executable
add_executable(calories day1.cpp)

# DAY 2 executable
add_executable(rock_paper_scissors day2.cpp)

# DAY 3 executable
add_executable(rucksack day3.cpp)

# DAY 4 executable
add_executable(camp_cleanup day4.cpp)

# DAY 5 executable
add_executable(supply day5.cpp)

# DAY 6 executable
# DAY 7 executable
# DAY 8 executable
# DAY 9 executable
# DAY 10 executable
# DAY 11 executable
# DAY 12 executable
# DAY 13 executable
# DAY 14 executable
# DAY 15 executable
# DAY 16 executable
# DAY 17 executable
# DAY 18 executable
# DAY 19 executable
# DAY 20 executable
# DAY 21 executable
# DAY 22 executable
# DAY 23 executable
# DAY 24 executable
# DAY 25 executable